--- a/about.html
+++ b/about.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>About Me!</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me!</title>
+    <link rel="stylesheet" href="stylesAssignment2.css">
 </head>
 <body>
 
-<h1>More Infomation about Myself</h1>
-<p>I am a first yaer graduate studnet here at Indiana Unversity with an underdraguate degree in Infomatics and a minor in Human-Centered-Computing.  I haven't decided what I want to do careerwise yet, but I know whereever I go would be a great option for me.  I come from a background where my Dad is a lawyer and Mom is a speech pathlogist.  All of my family has different intrests including my brother with a finnace background and sister with a biology background, which is unique</p> <br>
-<p>One of my favorite hobbies is baseball.  I enjoy going to Chicago Cubs games.  I've been going since the age of five and I'm a die hard fan! I enjoy going to games with my family and friends, nothing wrong with a ball game on a summer night!</p> <br>
-<p>One of my intrests inculde working with Accessibility, I have been working with ServeIT Non-Profit Clinc in Bloomington.  From 2023-2024 I worked as a studnet intern and from the start of the Graduate School I have been working as a graduate advisor.  I enjoy working with the city of Bloomington in conducting website accessbility non-profits better and this project has been a huge success!  </p>
+    <header>
+        <h1>More Information About Myself</h1>
+    </header>
 
-<Img src="indiana.jpeg" width="500" height="500">
-<br>
- <iframe width="420" height="315"
- src="https://www.youtube.com/embed/tgbNymZ7vqY">
-</iframe> 
-<ul>
-    <li><a href="index.html"> Main Page</a></li>
-    <li><a href="contact.html"> Contact Me!</a></li> 
- </ul>
+    <main class="container">
+        <div class="text-content">
+            <p>I am a first-year graduate student at Indiana University with an undergraduate degree in Informatics and a minor in Human-Centered Computing. I haven't decided what I want to do career-wise yet, but I know that wherever I go, it will be a great option for me. I come from a background where my dad is a lawyer and my mom is a speech pathologist. My family has diverse interests, including my brother with a finance background and my sister with a biology background, which is unique.</p>
+
+            <p>One of my favorite hobbies is baseball. I enjoy going to Chicago Cubs games. I've been attending since the age of five and I'm a die-hard fan! I love going to games with my family and friends—nothing beats a ball game on a summer night!</p>
+
+            <p>One of my interests includes working with Accessibility. I have been involved with the ServeIT Non-Profit Clinic in Bloomington. From 2023-2024, I worked as a student intern, and since starting graduate school, I have been working as a graduate advisor. I enjoy working with the city of Bloomington to improve website accessibility for non-profits, and this project has been a huge success!</p>
+        </div>
+
+        <div class="media-content">
+            <img src="indiana.jpeg" alt="Indiana University" class="profile-image">
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+        </div>
+    </main>
+
+    <nav class="nav-links">
+        <ul>
+            <li><a href="index.html">Main Page</a></li>
+            <li><a href="contact.html">Contact Me!</a></li> 
+        </ul>
+    </nav>
+
 </body>
-</html> 
+</html>
+
