--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Welcome to Liam Quinn's Website!</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to Liam Quinn's Website!</title>
+    <link rel="stylesheet" href="stylesAssignment2.css">
 </head>
 <body>
 
-<h1>Liam's Website</h1>
-<p>Hi!  My name is Liam Quinn and I'm a first year graduate school student here at IU.  I got my undergraduate degree here at Indiana in 2024 and I'm excited to be back.  I'm originally from Chicago and lived there for the first 18 years of my life, and I hope to move back there after my education career is done.  I'm looking forward to see what 2025 brings!</p>
-<img src="IMG_1041.jpeg" width="400px" height="400px">
-<ul>
-    <li><a href="about.html"> About Me!</a></li>
-    <li><a href="contact.html"> Contact Me!</a></li>
-</ul>
+    <header>
+        <h1>Liam's Website</h1>
+    </header>
+
+    <main class="container">
+        <div class="text-content">
+            <p>Hi! My name is Liam Quinn and I'm a first-year graduate student here at IU. I got my undergraduate degree here at Indiana in 2024, and I'm excited to be back. I'm originally from Chicago and lived there for the first 18 years of my life, and I hope to move back there after my education career is done. I'm looking forward to seeing what 2025 brings!</p>
+        </div>
+        <div class="image-container">
+            <img src="IMG_1041.jpeg" alt="Liam Quinn" class="profile-image">
+        </div>
+    </main>
+
+    <nav class="nav-links">
+        <ul>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
+        </ul>
+    </nav>
 
 </body>
-</html> 
+</html>
